added basic nav bar with dark theme

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,3 +6,11 @@
     border-radius: 50%;
     background-color: #0360d0;
 }
+
+body {
+    background: white;
+}
+
+.dark body {
+    background: black;
+}
